--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -50,7 +50,7 @@ Registration</a>
 			<br>
 			Sponsored by: Translational Research Institute
                         <a href="https://www.tri.edu.au/translational-research-institute-australia">
-                            <img src="/img/logos/tri.png" class="img-responsive" alt="">
+                            <img src="/img/logos/tri_logo.png" class="img-responsive" alt="">
                         </a>
 	  </div>
     </div>
@@ -73,7 +73,7 @@ Registration</a>
 		<br>
 		Sponsored by: QIMR Berghofer Medical Research Institute
       <a href="https://www.qimrberghofer.edu.au/">
-          <img src="/img/logos/qimr.png" class="img-responsive" alt="">
+          <img src="/img/logos/qimr_logo.png" class="img-responsive" alt="">
       </a>
 	  </div>
     </div>
@@ -130,7 +130,7 @@ Science & Society Panel</a>
 		  <br>
 		  Sponsored by: Australian National University – Research School of Biology
                         <a href="http://www.anu.edu.au/">
-                            <img src="/img/logos/anu.png" class="img-responsive" alt="">
+                            <img src="/img/logos/anu_logo.png" class="img-responsive" alt="">
                         </a>
 	  </div>
     </div>
@@ -154,7 +154,7 @@ Welcome Reception</a>
 		  <br>
       Sponsored by: Commonwealth Serum Laboratories
       <a href="https://www.csl.com/">
-          <img src="/img/logos/CSL.jpg" class="img-responsive" alt="">
+          <img src="/img/logos/csl_logo.jpg" class="img-responsive" alt="">
       </a>
 	  </div>
     </div>
@@ -198,7 +198,7 @@ Plenary Address - Oncology</a>
 		  <br>
       Sponsored by: Monash Biomedicine Discovery Institute
       <a href="https://www.monash.edu/discovery-institute/">
-        <img src="/img/logos/monash.png" class="img-responsive" alt="">
+        <img src="/img/logos/monash_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -264,7 +264,7 @@ Plenary Address - Neurobiology</a>
 		  <br>
 		  Sponsored by: South Australian Health & Medical Research Institute
                         <a href="https://www.sahmri.org/">
-                            <img src="/img/logos/sahmri.png" class="img-responsive" alt="">
+                            <img src="/img/logos/sahmri_logo.png" class="img-responsive" alt="">
                         </a>
 	  </div>
     </div>
@@ -314,7 +314,7 @@ Student Lightning Talks</a>
       <br>
       Sponsored by: Macrogen
       <a href="http://macrogen.com/en/">
-        <img src="/img/logos/macrogen_oceania.png" class="img-responsive" alt="">
+        <img src="/img/logos/macrogen_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
   </div>
@@ -357,7 +357,7 @@ Plenary Address - Bioinformatics</a>
 		  <br>
       Sponsored by: Charles Sturt University
       <a href="https://www.csu.edu.au/">
-        <img src="/img/logos/csu.png" class="img-responsive" alt="">
+        <img src="/img/logos/csu_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -404,7 +404,7 @@ Symposium Dinner</a>
 		  <br>
       Sponsored by: Australian Regenerative Medicine Institute
       <a href="https://www.armi.org.au/">
-        <img src="/img/logos/ARMI.png" class="img-responsive" alt="">
+        <img src="/img/logos/armi_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -443,7 +443,7 @@ Plenary Address - Ecology</a>
 		  <br>
       Sponsored by: University of Sydney – Faculty of Science
       <a href="https://sydney.edu.au/">
-        <img src="/img/logos/sydney.png" class="img-responsive" alt="">
+        <img src="/img/logos/uos_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -508,7 +508,7 @@ Plenary Address - Genetics & Cell Biology</a>
 		  <br>
 		  Sponsored by: St Vincent’s Institute of Medical Research
       <a href="https://www.svi.edu.au/">
-        <img src="/img/logos/svi.png" class="img-responsive" alt="">
+        <img src="/img/logos/svi_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -557,7 +557,7 @@ Student Lightning Talks</a>
 		  <br>
 		  Sponsored by: Abcam
                         <a href="https://www.abcam.com/">
-                            <img src="/img/logos/ABCAM.jpg" class="img-responsive" alt="">
+                            <img src="/img/logos/abcam_logo.jpg" class="img-responsive" alt="">
                         </a>
 	  </div>
   </div>
@@ -600,7 +600,7 @@ Plenary Address - Immunology & Virology</a>
 		  <br>
 		  Sponsored by: University of Wollongong, Faculty of Science, Medicine and Health
       <a href="https://www.uow.edu.au/index.html">
-        <img src="/img/logos/uow.png" class="img-responsive" alt="">
+        <img src="/img/logos/uow_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -649,7 +649,7 @@ Awards Presentation & Closing Address</a>
 		  <br>
 		  Sponsored by: Illumina
       <a href="https://www.illumina.com/">
-        <img src="/img/logos/illumina.png" class="img-responsive" alt="">
+        <img src="/img/logos/illumina_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
