--- a/_includes/competition.html
+++ b/_includes/competition.html
@@ -2,7 +2,8 @@
 <section id="competition" class="competition_bg">
         <div class="container">
             <div class="font-weight-normal text-center">
-                <h2 class="comp_heading">SciArt Competition</h2>
+                <h2 class="section-heading comp_heading">SciArt Competition</h2>
+				<br>
             </div>
             <div class="comp_text ">     
 
