--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Sponsors</h2>
-                                            <h3 class="section-subheading text-muted">Our sincere thanks to all of our, without you this event would not be possible.</h3>
+                                            <h3 class="section-subheading text-muted">Our sincere thanks to all of our sponsors, without you this event would not be possible.</h3>
 
                     </div>
                 </div>
