--- a/_includes/css/eaps.css
+++ b/_includes/css/eaps.css
@@ -6,6 +6,18 @@
   top: -20px;
 }
 
+.btn-closed {
+  border-color: grey;
+  color: #000;
+  background-color: grey;
+  padding: 20px 40px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-family: {{ site.data.template.font.primary }};
+  font-size: 18px;
+  font-weight: 700;
+}
+
 .section-heading {
     color: #595959;
 }
