--- a/_includes/register.html
+++ b/_includes/register.html
@@ -4,13 +4,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Register</h2>
-					<h3 class="section-subheading text-muted">Registration is now open, as of the 12<sup>th</sup> of June!</h3>
+					<h3 class="section-subheading text-muted">Registration is now closed.</h3>
                 </div>
             </div>
             <div class="register">
 
               <div class="text-center">
-             <a href="https://shop.monash.edu/embl-australia-phd-symposium-registration.html" class="page-scroll btn btn-xl">Register Now!</a>
            </div>
 
            <h3 class="text-align-left service-heading">Registration Cost</h3>
