--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -127,11 +127,11 @@ Science & Society Panel</a>
 
 
     </ul>
-		  <br>
-		  Sponsored by: Australian National University – Research School of Biology
-                        <a href="http://www.anu.edu.au/">
-                            <img src="/img/logos/anu_logo.png" class="img-responsive" alt="">
-                        </a>
+      <br>
+      Sponsored by: Charles Sturt University
+      <a href="https://www.csu.edu.au/">
+        <img src="/img/logos/csu_logo.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>
@@ -152,7 +152,7 @@ Welcome Reception</a>
 			  <i>Location: Atrium</i>
 		  </ul>
 		  <br>
-      Sponsored by: Commonwealth Serum Laboratories
+      Sponsored by: CSL Limited
       <a href="https://www.csl.com/">
           <img src="/img/logos/csl_logo.jpg" class="img-responsive" alt="">
       </a>
@@ -312,10 +312,10 @@ Student Lightning Talks</a>
 			  <li>Session 1</li>
 		  </ul>
       <br>
-      Sponsored by: Macrogen
-      <a href="http://macrogen.com/en/">
-        <img src="/img/logos/macrogen_logo.png" class="img-responsive" alt="">
-    </a>
+      Sponsored by: Australian National University – Research School of Biology
+                        <a href="http://www.anu.edu.au/">
+                            <img src="/img/logos/anu_logo.png" class="img-responsive" alt="">
+                        </a>
 	  </div>
   </div>
     </div>
@@ -334,7 +334,12 @@ Lunch & Student Poster Presentations</a>
 		  <ul>
 			  <i>Location: Room 2003 + 2004</i>
 			  <li>Poster Session A</li>
-		  </ul>
+      </ul>
+      <br>
+      Sponsored by: Macrogen
+      <a href="http://macrogen.com/en/">
+        <img src="/img/logos/macrogen_logo.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>  
@@ -577,7 +582,12 @@ Lunch & Student Poster Presentations</a>
 		  <ul>
 			  <i>Location: Room 2003 + 2004</i>
 			  <li>Poster Session B</li>
-		  </ul>
+      </ul>
+      <br>
+		  Sponsored by: Illumina
+      <a href="https://www.illumina.com/">
+        <img src="/img/logos/illumina_logo.png" class="img-responsive" alt="">
+    </a>
 	  </div>
     </div>
   </div>  
@@ -647,10 +657,11 @@ Awards Presentation & Closing Address</a>
 			  <li><b>Jasmina Markulić</b> - EAPS 2018 Chair</li>
 		  </ul>
 		  <br>
-		  Sponsored by: Illumina
-      <a href="https://www.illumina.com/">
-        <img src="/img/logos/illumina_logo.png" class="img-responsive" alt="">
-    </a>
+      Sponsored by: Translational Research Institute
+      <a href="https://www.tri.edu.au/translational-research-institute-australia">
+          <img src="/img/logos/tri_logo.png" class="img-responsive" alt="">
+      </a>
+
 	  </div>
     </div>
 </div>
