--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -114,8 +114,8 @@
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
-                        <a href="https://www.illumina.com/">
-                            <img src="/img/logos/illumina_logo.png" class="img-responsive img-centered" alt="">
+                        <a href="https://www.unimelb.edu.au/">
+                            <img src="/img/logos/uom_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                 </div>
@@ -125,7 +125,12 @@
                             <img src="/img/logos/agrf_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
-                    
+                    <div class=" col-md-3 col-sm-6 sponsor">
+                        <a href="https://www.illumina.com/">
+                            <img src="/img/logos/illumina_logo.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
