--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -130,6 +130,16 @@
                             <img src="/img/logos/illumina_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
+                    <div class=" col-md-3 col-sm-6 sponsor">
+                        <a href="https://www.aust-biosearch.com.au/">
+                            <img src="/img/logos/ab_logo.png" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
+                    <div class=" col-md-3 col-sm-6 sponsor">
+                        <a href="https://www.sirromet.com/">
+                            <img src="/img/logos/sirromet_logo.jpg" class="img-responsive img-centered" alt="">
+                        </a>
+                    </div>
 
                 </div>
             </div>
