fix for legacy location

--- a/_includes/biographies.html
+++ b/_includes/biographies.html
@@ -10,7 +10,7 @@
 				<div class="bio_text row text-align-left team-member">
                     <div id="Keynote" style="position: relative; top:-50px;"></div>
                     <div class="bio-image col-sm-4">
-                        <img src="/img/people/Ian_Frazer_300px.jpg" class="img-responsive img-circle" alt="">
+                        <img src="{{ site.baseurl }}/img/people/Ian_Frazer_300px.jpg" class="img-responsive img-circle" alt="">
                     </div>
                     <div class="col-sm-8 text-justify">
                       <h4>Prof. Ian Frazer</h4>
@@ -23,7 +23,7 @@
                 <div class="bio_text row text-align-left team-member">
                     <div id="{{ member.id }}" style="position: relative; top:-50px;"></div>
                     <div class="bio-image col-sm-4">
-                        <img src="/img/people/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        <img src="{{ site.baseurl }}/img/people/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
                     </div>
                     <div class="col-sm-8 text-justify">
                       <h4>{{ member.name }}</h4>
