--- a/_includes/speakers.html
+++ b/_includes/speakers.html
@@ -8,8 +8,8 @@
                 </div>
             </div>
 				<div class="team-member">
-                    <a href="/speakers/#Keynote">
-					   <img src="/img/people/Ian_Frazer_300px.jpg" class="img-responsive img-circle img-speaker" alt="">
+                    <a href="{{ site.baseurl }}/speakers/#Keynote">
+					   <img src="{{ site.baseurl }}/img/people/Ian_Frazer_300px.jpg" class="img-responsive img-circle img-speaker" alt="">
                     </a>
 					<h4>Prof. Ian Frazer</h4>
 					<p class="text-muted">Keynote Speaker</p>
@@ -19,8 +19,8 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member"  id="{{ member.id }}">
-                        <a href="/speakers/#{{ member.id }}">
-                            <img src="/img/people/{{ member.pic }}.jpg" class="img-responsive img-circle img-speaker" alt="">
+                        <a href="{{ site.baseurl }}/speakers/#{{ member.id }}">
+                            <img src="{{ site.baseurl }}/img/people/{{ member.pic }}.jpg" class="img-responsive img-circle img-speaker" alt="">
                         </a>
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.theme }} Speaker</p>
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center"><br><br>
-                    <a href="/speakers"><p class="large text-muted">Select an individual speaker or click here for detailed speaker biographies.</p></a>
+                    <a href="{{ site.baseurl }}/speakers"><p class="large text-muted">Select an individual speaker or click here for detailed speaker biographies.</p></a>
                 </div>
             </div>
         </div>
