--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -12,132 +12,132 @@
                 <div class="row">
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.tri.edu.au/translational-research-institute-australia">
-                            <img src="/img/logos/tri_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/tri_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="http://www.emblaustralia.org/">
-                            <img src="/img/logos/emblaus_logo.jpg" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/emblaus_logo.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.sahmri.org/">
-                            <img src="/img/logos/sahmri_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/sahmri_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.csl.com/">
-                            <img src="/img/logos/csl_logo.jpg" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/csl_logo.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row">
                      <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.monash.edu/discovery-institute/">
-                            <img src="/img/logos/monash_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/monash_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="http://www.scientifix.com.au/">
-                            <img src="/img/logos/scientifix_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/scientifix_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.waters.com/">
-                            <img src="/img/logos/waters_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/waters_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="http://macrogen.com/en/">
-                            <img src="/img/logos/macrogen_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/macrogen_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.abcam.com/">
-                            <img src="/img/logos/abcam_logo.jpg" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/abcam_logo.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="http://www.coherent.com.au/">
-                            <img src="/img/logos/coherent_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/coherent_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.qimrberghofer.edu.au/">
-                            <img src="/img/logos/qimr_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/qimr_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.csu.edu.au/">
-                            <img src="/img/logos/csu_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/csu_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.stemcell.com/">
-                            <img src="/img/logos/stemcell_logo.jpg" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/stemcell_logo.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://biotools.com.au/">
-                            <img src="/img/logos/biotools_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/biotools_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.armi.org.au/">
-                            <img src="/img/logos/armi_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/armi_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.svi.edu.au/">
-                            <img src="/img/logos/svi_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/svi_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.uow.edu.au/index.html">
-                            <img src="/img/logos/uow_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/uow_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://sydney.edu.au/">
-                            <img src="/img/logos/uos_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/uos_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="http://www.anu.edu.au/">
-                            <img src="/img/logos/anu_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/anu_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.unimelb.edu.au/">
-                            <img src="/img/logos/uom_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/uom_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row">
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="http://www.agrf.org.au/">
-                            <img src="/img/logos/agrf_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/agrf_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.illumina.com/">
-                            <img src="/img/logos/illumina_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/illumina_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.aust-biosearch.com.au/">
-                            <img src="/img/logos/ab_logo.png" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/ab_logo.png" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
                     <div class=" col-md-3 col-sm-6 sponsor">
                         <a href="https://www.sirromet.com/">
-                            <img src="/img/logos/sirromet_logo.jpg" class="img-responsive img-centered" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/sirromet_logo.jpg" class="img-responsive img-centered" alt="">
                         </a>
                     </div>
 
