--- a/_includes/programme.html
+++ b/_includes/programme.html
@@ -50,7 +50,7 @@ Registration</a>
 			<br>
 			Sponsored by: Translational Research Institute
                         <a href="https://www.tri.edu.au/translational-research-institute-australia">
-                            <img src="/img/logos/tri_logo.png" class="img-responsive" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/tri_logo.png" class="img-responsive" alt="">
                         </a>
 	  </div>
     </div>
@@ -74,7 +74,7 @@ Plenary Address - Neurobiology</a>
 		  <br>
 		  Sponsored by: South Australian Health & Medical Research Institute
                         <a href="https://www.sahmri.org/">
-                            <img src="/img/logos/sahmri_logo.png" class="img-responsive" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/sahmri_logo.png" class="img-responsive" alt="">
                         </a>
 	  </div>
     </div>
@@ -131,7 +131,7 @@ Science & Society Panel</a>
       <br>
       Sponsored by: Charles Sturt University
       <a href="https://www.csu.edu.au/">
-        <img src="/img/logos/csu_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/csu_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -155,7 +155,7 @@ Welcome Reception</a>
 		  <br>
       Sponsored by: CSL Limited
       <a href="https://www.csl.com/">
-          <img src="/img/logos/csl_logo.jpg" class="img-responsive" alt="">
+          <img src="{{ site.baseurl }}/img/logos/csl_logo.jpg" class="img-responsive" alt="">
       </a>
 	  </div>
     </div>
@@ -199,7 +199,7 @@ Plenary Address - Oncology</a>
 		  <br>
       Sponsored by: Monash Biomedicine Discovery Institute
       <a href="https://www.monash.edu/discovery-institute/">
-        <img src="/img/logos/monash_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/monash_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -265,7 +265,7 @@ Student Lightning Talks</a>
       <br>
       Sponsored by: Australian National University – Research School of Biology
                         <a href="http://www.anu.edu.au/">
-                            <img src="/img/logos/anu_logo.png" class="img-responsive" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/anu_logo.png" class="img-responsive" alt="">
                         </a>
 	  </div>
   </div>
@@ -314,7 +314,7 @@ Student Oral Presentations - Neurobiology</a>
 		<br>
 		Sponsored by: QIMR Berghofer Medical Research Institute
       <a href="https://www.qimrberghofer.edu.au/">
-          <img src="/img/logos/qimr_logo.png" class="img-responsive" alt="">
+          <img src="{{ site.baseurl }}/img/logos/qimr_logo.png" class="img-responsive" alt="">
       </a>
 	  </div>
     </div>
@@ -338,7 +338,7 @@ Lunch & Student Poster Presentations</a>
       <br>
       Sponsored by: Macrogen
       <a href="http://macrogen.com/en/">
-        <img src="/img/logos/macrogen_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/macrogen_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -362,7 +362,7 @@ Plenary Address - Bioinformatics</a>
 		  <br>
       Sponsored by: Charles Sturt University
       <a href="https://www.csu.edu.au/">
-        <img src="/img/logos/csu_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/csu_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -409,7 +409,7 @@ Symposium Dinner</a>
 		  <br>
       Sponsored by: Australian Regenerative Medicine Institute
       <a href="https://www.armi.org.au/">
-        <img src="/img/logos/armi_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/armi_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -448,7 +448,7 @@ Plenary Address - Ecology</a>
 		  <br>
       Sponsored by: University of Sydney – Faculty of Science
       <a href="https://sydney.edu.au/">
-        <img src="/img/logos/uos_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/uos_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -513,7 +513,7 @@ Plenary Address - Genetics & Cell Biology</a>
 		  <br>
 		  Sponsored by: St Vincent’s Institute of Medical Research
       <a href="https://www.svi.edu.au/">
-        <img src="/img/logos/svi_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/svi_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -562,7 +562,7 @@ Student Lightning Talks</a>
 		  <br>
 		  Sponsored by: Abcam
                         <a href="https://www.abcam.com/">
-                            <img src="/img/logos/abcam_logo.jpg" class="img-responsive" alt="">
+                            <img src="{{ site.baseurl }}/img/logos/abcam_logo.jpg" class="img-responsive" alt="">
                         </a>
 	  </div>
   </div>
@@ -586,7 +586,7 @@ Lunch & Student Poster Presentations</a>
       <br>
 		  Sponsored by: Illumina
       <a href="https://www.illumina.com/">
-        <img src="/img/logos/illumina_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/illumina_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -610,7 +610,7 @@ Plenary Address - Immunology & Virology</a>
 		  <br>
 		  Sponsored by: University of Wollongong, Faculty of Science, Medicine and Health
       <a href="https://www.uow.edu.au/index.html">
-        <img src="/img/logos/uow_logo.png" class="img-responsive" alt="">
+        <img src="{{ site.baseurl }}/img/logos/uow_logo.png" class="img-responsive" alt="">
     </a>
 	  </div>
     </div>
@@ -659,7 +659,7 @@ Awards Presentation & Closing Address</a>
 		  <br>
       Sponsored by: Translational Research Institute
       <a href="https://www.tri.edu.au/translational-research-institute-australia">
-          <img src="/img/logos/tri_logo.png" class="img-responsive" alt="">
+          <img src="{{ site.baseurl }}/img/logos/tri_logo.png" class="img-responsive" alt="">
       </a>
 
 	  </div>
